<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Groceries">

    <TextView
        android:id="@+id/groceriesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="132dp"
        android:layout_marginRight="236dp"
        android:layout_marginStart="132dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/groceries"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/groceriesAmount"
        android:layout_width="244dp"
        android:layout_height="206dp"
        android:layout_marginEnd="68dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/defaultInput"
        android:textSize="55pt"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceriesView" />

    <Button
        android:id="@+id/updateGroceries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/updateGroceries"
        android:onClick="updateGroceries"
        app:layout_constraintEnd_toEndOf="@+id/groceriesAmount"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="@+id/groceriesAmount"
        app:layout_constraintTop_toBottomOf="@+id/groceriesAmount" />

</android.support.constraint.ConstraintLayout>